--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
     "nodemon": "^3.0.1",
+    "qrcode": "^1.5.3",
     "shortid": "^2.2.16"
   }
 }
